export enum TipoCancha {
  FUTBOL = 'FUTBOL',
  BASQUET = 'BASQUET',
  TENIS = 'TENIS',
  VOLEY = 'VOLEY',
}
